Settings button mobile accesibility fix v2

--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ header a:hover {
 @media only screen and (max-width: 600px) {
   header {
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 150px;
   }
 
   .open-menu {
